argo-app-go-server/go-server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server
  namespace: go-server-ns
spec:
  selector:
    matchLabels:
      app: go-server
  replicas: 1
  minReadySeconds: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: go-server
    spec:
      containers:
      - name: go-server
        image: k3d-reg:5000/go-server:v1.0
        ports:
        - containerPort: 8090
